# INFO-H-502

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
resources/others/: Fresnel.txt
src/collisions/: MyContactResultCallback.cpp
src/game/: GameManager.cpp
src/meshes/: CubeMap.cpp  Mesh.h  refMesh.cpp
src/objects/: Cubemap.cpp  MirrorFace.cpp  object.h  reflectableObject.cpp  refractableObject.cpp  rigidObject.cpp
src/scene/: game.cpp  main.cpp
src/shaders/: cube.frag  cube.vert  cubemap.frag  cubemap.vert  mirror.frag  mirror.vert  ref.vert  reflect.frag  refract.frag
src/utils/: Fresnel.h  Light.h  Mesh.h  Texture.h  camera.h  object.h  rigidObject.cpp  shader.h
